part3/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: todos
          image: PROJECT/IMAGE_FRONTEND
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
        - name: todo-backend
          image: PROJECT/IMAGE_BACKEND
          ports:
            - containerPort: 3001
