part3/project/manifests/backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - port: 30081
      protocol: TCP
      targetPort: 3001
