part3/project/manifests/projectstatefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: projectdb
spec:
  serviceName: projectdb-svc
  replicas: 1
  selector:
    matchLabels:
      app: projectdbapp
  template:
    metadata:
      labels:
        app: projectdbapp
    spec:
      containers:
        - name: project-psql
          image: postgres:17
          resources:
            requests:
              cpu: '100m'
              memory: '10Ki'
            limits:
              cpu: '200m'
              memory: '128Mi'
          ports:
            - name: projectdbport
              containerPort: 5432
          volumeMounts:
            - name: psql-data-storage
              mountPath: /data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: psql-data-storage
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: projectdb-svc
  labels:
    app: projectdbapp
spec:
  ports:
    - port: 5432
      name: projectdbport
  clusterIP: None
  selector:
    app: projectdbapp
