part3/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-svc
spec:
  type: NodePort
  selector:
    app: todos
  ports:
    - port: 30080
      protocol: TCP
      targetPort: 3000
